force-app/main/default/objects/Mass_Upload_Lead_Request__c/Mass_Upload_Lead_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object to upload multiple leads request.</description>
    <label>Mass Lead Upload Request</label>
    <nameField>
        <displayFormat>MLUR-{000000}</displayFormat>
        <label>MLUR Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Lead Upload Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>