force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Affinity_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Account_ID__c</fullName>
    <formula>Partner_Account__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affinity Account ID</label>
    <type>Text</type>
</CustomField>