force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Marketing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Comments__c</fullName>
    <label>Marketing Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>