force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Mascot_ID__c.field-meta.xml
<CustomField>
    <fullName>Mascot_ID__c</fullName>
    <formula>Campaign__r.Aprimo_Activity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mascot ID</label>
    <type>Text</type>
</CustomField>