force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Mass_Upload_Lead_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>