force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Partner_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email_ID__c</fullName>
    <label>Partner Email ID</label>
    <type>Email</type>
</CustomField>