force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Partner_Super_User_ApiOnly__c.field-meta.xml
<CustomField>
    <fullName>Partner_Super_User_ApiOnly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to populate the Super user to be copied in email alert.</description>
    <label>Partner Super User ApiOnly</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mass_Upload_Lead_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>