force-app/main/default/objects/Mass_Upload_Lead_Request__c/fields/Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comments__c</fullName>
    <label>Sales Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>