force-app/main/default/objects/Mass_Upload_Lead_Request__c/validationRules/Channel_Partner_User_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Partner_User_Validation</fullName>
    <active>true</active>
    <description>To validate whether the Partner user selected corresponds to the Partner Account assigned to the Lead.</description>
    <errorConditionFormula>OR(
AND( 
NOT(ISBLANK(Partner_User__c)), 
NOT(ISBLANK(Partner_Account__c)), 
NOT(CONTAINS(Partner_User__r.Contact.EligibleTracks__c,Partner_Account__r.Partner_Track__r.Id)) 
),
AND(
NOT(ISBLANK(Partner_Account__c)),
ISBLANK(Partner_Account__r.Partner_Track__c))
)</errorConditionFormula>
    <errorMessage>This Partner user does not belong to the Partner Account selected</errorMessage>
</ValidationRule>