force-app/main/default/objects/Mass_Upload_Lead_Request__c/validationRules/MLUR_Partner_Account_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MLUR_Partner_Account_Validation</fullName>
    <active>true</active>
    <description>Only Partner Account can be selected when creating or editing Channel Lead</description>
    <errorConditionFormula>AND(Partner_Account__r.RecordTypeId &lt;&gt; &apos;012A0000000TR6Y&apos;, Partner_Account__c &lt;&gt; NULL)</errorConditionFormula>
    <errorDisplayField>Partner_Account__c</errorDisplayField>
    <errorMessage>Selected account is incorrect, or cannot be found, please contact your channel marketing team for assistance.</errorMessage>
</ValidationRule>