force-app/main/default/objects/Mass_Upload_Lead_Request__c/listViews/Mass_Lead_Upload_Requests.listView-meta.xml
<ListView>
    <fullName>Mass_Lead_Upload_Requests</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Mass Lead Upload Requests</label>
    <language>en_US</language>
</ListView>